Fix readability

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -56,7 +56,7 @@ main {
 	padding: 10px;
 	opacity: 0.6;
 	font-size: 13px;
-	#cr {
+	#copyright {
 		opacity: 0.7;
 		margin-top: 15px;
 		margin-bottom: 5px;
